--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
-    "@vitejs/plugin-react": "^4.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -77,7 +76,10 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
+    "@replit/vite-plugin-cartographer": "^0.2.7"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -103,3 +105,4 @@
     "bufferutil": "^4.0.8"
   }
 }
+
